<resources>
    <string name="cancel">Cancel</string>
    <string name="app_name">ExampleApplication</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log Out</string>

    <string name="full_name">Full Name</string>
    <string name="pass">PassWord</string>
    <string name="login_register">Don\'t have an account? Register</string>
    <string name="login_or">Or</string>
    <string name="login_with">Login/Register with</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">User name</string>
    <string name="email">Email</string>
    <string name="number_phone">Number Phone</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="register_now">Register Now</string>
    <string name="you_have_an_ac_login">You have an account? Login</string>

    <string name="error_response">Something wrong!!</string>
    <string name="login_success">Login success</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu__laundry_drop_off">Laundry Drop Off</string>
    <string name="menu_online_shop">Online Shopping</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="map">Map</string>
    <string name="laundry_drop_off">Laundry Drop Off</string>
    <string name="laundry_pick_up">Laundry Pick Up</string>
    <string name="online_shopping">Online Shopping</string>
    <string name="top_up">Top Up</string>
    <string name="order">Order</string>
    <string name="reward">Reward</string>
    <string name="my_card">My Card</string>
    <string name="pricing">Pricing</string>
    <string name="setting">Setting</string>
    <string name="contact_us">Contact Us</string>
    <string name="check_length_input">Please enter enough information</string>
    <string name="check_internet_connection">Please connect to the Internet</string>
    <string name="check_confirm_pass">Confirm password wrong</string>

    <string name="check_input_verify_mail">Invalid email address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="txtBlance">
        Balance
    </string>
    <string name="txtVouchers">
        Vouchers
    </string>
    <string name="txtPoints">
        Points
    </string>
    <string name="reset_password">
        <u>Reset Password</u>
    </string>
    <string name="information">
        Thông số kĩ thuật : \n
        - CPU: Intel Core i7-4800QM Processor 8*2.7 Ghz (8Mb Cache, Tubo 3.7 Ghz)\n
        - RAM: 8GB  DDR3, 1600 \n
        - GPU: Intel Graphics HD 4600 + Nvidia Quadro K1100M (2GB dedicated GDDR5) \n
        - HDD/SSD: SSD 256GB \n
        - Display: 15.6 inch Anti-glare LED Backlit High Definition Full HD (1920x1080) \n
        - Optical drive: DVD-RW \n
        - Connectivity: LAN 10/100/1000 Mbps, Wi-Fi 802.11 \n
        - Other features: 4x USB 3.0, DisplayPort, 3.5 mm audio jack, HDMI, VGA, card reader (SD, MMC, MS) \n
        - Battery: 85Wh (9cell), \n
        - Thickness: 39.9 mm \n
        - Weight: 2.9 kg (6.5 lbs) \n
    </string>
    <string name="introduce">
        Giới thiệu sản phẩm: \n
        - Đây cũng là một dòng máy trạm hầm hố với cấu hình khủng đến từ hãng Dell. Với cấu hình này bạn hoàn toàn có thể chơi game làm đồ hoạ… thoải mái. Hãy  cùng mình tìm hiểu thêm về dòng sản phẩm này nhé. \n
        - Như những người anh em tiền nhiệm thì Dell Precision m4800 có thiết kế cực kỳ góc cạnh. Thiết kế dạng hộp vuông kiểu cũ với các đường nét đơn giản nhưng lại toát lên sự mạnh mẽ đầy cá tính.\n
          Vỏ ngoài cũng được thiết kế từ hợp kim nhôm với khung sườn magie cấu trúc tổ ong chịu lực chịu va đập mạnh.
    </string>
</resources>
