<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.exampleapplication.ui.navigation.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.exampleapplication.ui.navigation.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_laundry_drop_off"
        android:name="com.example.exampleapplication.ui.navigation.laundrydropoff.LaundryDopOffFragment"
        android:label="@string/menu__laundry_drop_off"
        tools:layout="@layout/fragment_laundry_drop_off" />

    <fragment
        android:id="@+id/nav_online_shop"
        android:name="com.example.exampleapplication.ui.navigation.onlineshop.OnlineShopFragment"
        android:label="@string/menu_online_shop"
        tools:layout="@layout/fragment_online_shop" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.exampleapplication.ui.navigation.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.exampleapplication.ui.navigation.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>