<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_example"
            android:layout_width="150dp"
            android:layout_height="150dp">

        </ImageView>

        <TextView
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:textColor="@color/colorBlue"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <EditText
            android:id="@+id/edtRegisterFullName"
            android:layout_marginTop="15dp"
            android:maxLines="1"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColorHint="@color/colorGray"
            android:hint="@string/full_name"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/background_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            tools:ignore="RtlSymmetry">

        </EditText>

        <EditText
            android:id="@+id/edtRegisterUserName"
            android:layout_marginTop="15dp"
            android:maxLines="1"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColorHint="@color/colorGray"
            android:hint="@string/username"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/background_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            tools:ignore="RtlSymmetry">

        </EditText>

        <EditText
            android:id="@+id/edtRegisterEmail"
            android:layout_marginTop="15dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textColorHint="@color/colorGray"
            android:hint="@string/email"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/background_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            tools:ignore="RtlSymmetry">

        </EditText>

        <EditText
            android:id="@+id/edtRegisterNumberPhone"
            android:layout_marginTop="15dp"
            android:maxLines="1"
            android:inputType="number"
            android:paddingStart="10dp"
            android:textColorHint="@color/colorGray"
            android:hint="@string/number_phone"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/background_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            tools:ignore="RtlSymmetry">

        </EditText>

        <EditText
            android:id="@+id/edtRegisterPass"
            android:layout_marginTop="15dp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColorHint="@color/colorGray"
            android:hint="@string/pass"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/background_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            tools:ignore="RtlSymmetry">

        </EditText>
        <EditText
            android:id="@+id/edtRegisterConfirmPass"
            android:layout_marginTop="15dp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColorHint="@color/colorGray"
            android:hint="@string/confirm_pass"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/background_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            tools:ignore="RtlSymmetry">

        </EditText>

        <Button
            android:id="@+id/bntRegister"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:text="@string/register_now"
            android:background="@drawable/background_button"
            android:layout_width="match_parent"
            android:layout_height="40dp">

        </Button>

        <TextView
            android:id="@+id/txvRegister"
            android:textSize="15dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textColor="@color/colorBlue"
            android:text="@string/you_have_an_ac_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"/>
    </LinearLayout>
</ScrollView>